--- a/content/Assignments.html
+++ b/content/Assignments.html
@@ -141,12 +141,12 @@ img.add_border {
         </header>
     <div id="tipue_search_content">Meeting << <a href='Meeting.html'>Previous</a> <a href='各週任務.html'>Next</a> >> 各週任務<br /><h1>Assignments</h1>
 <p>協同產品設計實習課程學員評分要點:</p>
-<p>sustainable (永續):</p>
+<p>sustainable (可持續使用, 永續):</p>
 <p style="padding-left: 30px;">1 : capable of being sustained (可持續)</p>
 <p style="padding-left: 30px;">2a : of, relating to, or being a method of harvesting (獲取成果) or using a resource (運用資源) so that the resource (該資源) is not depleted (不致枯竭) or permanently damaged (永久損壞).</p>
 <p style="padding-left: 30px;">2b : of or relating to a lifestyle involving the use of sustainable methods (採取永續的生活方式)</p>
 <p style="padding-left: 30px;">在 cd2022 課程 sustainable 代表所採行的解題方式, <span style="background-color: #ffff99;">為所有分組組員認可是當下環境中, 最佳處理方式與流程, 可作為其他分組學習並能在課程各階段任務中延續使用</span>.</p>
-<p>resilience (應變能力):</p>
+<p>resilience (應變能力, 韌性):</p>
 <p style="padding-left: 30px;">1 : the capability of a strained body (承受應變物體) to recover its size and shape after deformation caused especially by compressive stress (尤指受到壓縮應力)</p>
 <p style="padding-left: 30px;">2 : an ability to recover (回復能力) from or adjust easily (易於調適) to misfortune or change (面臨意外情境或變化)</p>
 <p style="padding-left: 30px;">在 cd2022 課程 resilience 代表<span style="background-color: #ffff99;">各分組成員需具備一定的應變處理能力</span>.</p>
@@ -180,8 +180,7 @@ img.add_border {
 <h4>2bw2:</h4>
 <p>建立個人 cd2022 與 cd2022bg1 (以 2b 第一大組為例) 時, 可以用 import <a href="https://github.com/mdecourse/cmsimde_site">cmsimde_site</a> 倉儲 (但 history 將會是 mdecourse 而非學員), 或 git submodule add 或直接將 cmsimde 下載 <a href="https://github.com/mdecourse/cmsimde/archive/refs/heads/master.zip">https://github.com/mdecourse/cmsimde/archive/refs/heads/master.zip</a> 後解開為倉儲下的 cmsimde 目錄, 之後再將 up_dir 內容複製到倉儲根目錄. 當評分檢查時, 各大組需繳交全班各學員是否達成任務要求.</p>
 <p>cd2022 w2 任務 1:</p>
-<p style="padding-left: 30px;">請各組利用一個小時建立一個欄位以 tab 隔開的 txt 檔案, 欄位標題分別為學號, 個人倉儲, 大分組倉儲排列, 按照各班學員學號順序 (<a href="https://nfulist.herokuapp.com/?semester=1102&amp;courseno=0752&amp;column=True">2a 修課學員</a>, <a href="https://nfulist.herokuapp.com/?semester=1102&amp;courseno=0764&amp;column=True">2b 修課學員</a>). 完成後請各大組將結果回應至 <a href="https://github.com/mdecourse/cd2022/discussions/16">2b w2 討論區</a>.</p>
-<br />Meeting << <a href='Meeting.html'>Previous</a> <a href='各週任務.html'>Next</a> >> 各週任務</div>
+<p style="padding-left: 30px;">請各組利用一個小時建立一個欄位以 tab 隔開的 txt 檔案, 欄位標題分別為學號, 個人倉儲, 大分組倉儲排列, 按照各班學員學號順序 (<a href="https://nfulist.herokuapp.com/?semester=1102&amp;courseno=0752&amp;column=True">2a 修課學員</a>, <a href="https://nfulist.herokuapp.com/?semester=1102&amp;courseno=0764&amp;column=True">2b 修課學員</a>). 完成後請各大組將結果回應至 <a href="https://github.com/mdecourse/cd2022/discussions/16">2b w2 討論區</a>.</p><br />Meeting << <a href='Meeting.html'>Previous</a> <a href='各週任務.html'>Next</a> >> 各週任務</div>
         
     <!-- footer -->
       <div class="container">
