--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -218,6 +218,7 @@ var winkVideoData = {
 <h2>TEX and LaTeX</h2>
 <p>為什麼協同產品設計實習需要採用 TEX 與 LaTeX 輸出技術文件?</p>
 <p><a href="https://github.com/mdecycu/4072pj1/blob/master/.github/workflows/main.yml">https://github.com/mdecycu/4072pj1/blob/master/.github/workflows/main.yml</a></p>
+<p><a href="https://dev.to/mrturkmen/latex-with-github-actions-4580">https://dev.to/mrturkmen/latex-with-github-actions-4580</a> </p>
 <p><a href="https://www.reed.edu/cis/help/LaTeX/intro.html">https://www.reed.edu/cis/help/LaTeX/intro.html</a> </p>
 <p><a href="https://ftp.ntou.edu.tw/ctan/info/gentle/gentle.pdf">https://ftp.ntou.edu.tw/ctan/info/gentle/gentle.pdf</a></p>
 <p><a href="http://tug.ctan.org/info/impatient/book.pdf">http://tug.ctan.org/info/impatient/book.pdf</a></p>
