--- a/content/w7_summary.html
+++ b/content/w7_summary.html
@@ -2,7 +2,7 @@
         <head>
         <title>CD_Guide</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,21 +139,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Onshape << <a href='Onshape.html'>Previous</a> <a href='Tic-Tat-Toe.html'>Next</a> >> Tic-Tat-Toe<br /><h1>Coppeliasim</h1>
-<p>根據 <a href="https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm">https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm</a> 中有關 simple format 的說明, 可直接將 uArm 機械手臂在 NX 中的零組件, 透過 NXOpen Python API 的程式轉為 CoppeliaSim 的 Scene hierarchy 組合狀態.</p>
-<p>如此便將 uArm 機械手臂各零組件參數化, 然後直接在 Brython 前端介面設定 uArm 機械手臂的設計參數, 經由 AJAX 將參數送至後端 Flask + NXOpen Python API 伺服器, 產生 uArm 機械手臂組合場景後, 再透過 <a href="https://www.coppeliarobotics.com/helpFiles/en/legacyRemoteApiOverview.htm">Legacy Python remote API</a> 或 <a href="https://www.coppeliarobotics.com/helpFiles/en/zmqRemoteApiOverview.htm">ZeroMQ Python remote API</a> 控制 uArm 機械手臂 (或利用 <a href="https://www.ensta-bretagne.fr/zerr/dokuwiki/doku.php?id=vrep:socket-com-with-robot">Socket 傳遞控制參數</a>), 並以客製化 image sensor 的<a href="https://forum.coppeliarobotics.com/viewtopic.php?t=3457">影像串流</a>從 Flask server 送至各協同成員的瀏覽器, 或採 <a href="https://www.coppeliarobotics.com/helpFiles/en/externalFrontEnd.htm">Web browser based frontend</a> 方式呈現控制流程.</p>
-<p><a href="https://www.york.ac.uk/media/electronic-engineering/welcome/Simulation%20Challenge%20-%20Python%20Scripting.pdf">https://www.york.ac.uk/media/electronic-engineering/welcome/Simulation%20Challenge%20-%20Python%20Scripting.pdf</a></p>
-<p><a href="http://hades.mech.northwestern.edu/index.php/Getting_Started_with_the_CoppeliaSim_Simulator">http://hades.mech.northwestern.edu/index.php/Getting_Started_with_the_CoppeliaSim_Simulator</a></p>
-<p><a href="https://www.doc.ic.ac.uk/~ajd/Robotics/RoboticsResources/questions1.pdf">https://www.doc.ic.ac.uk/~ajd/Robotics/RoboticsResources/questions1.pdf</a></p>
-<p><a href="https://github.com/stepjam/PyRep">https://github.com/stepjam/PyRep</a></p>
-<p><a href="https://www.diva-portal.org/smash/get/diva2:1569215/FULLTEXT02.pdf">https://www.diva-portal.org/smash/get/diva2:1569215/FULLTEXT02.pdf</a></p>
-<p><a href="https://github.com/abr/abr_control">https://github.com/abr/abr_control</a></p>
-<hr/>
-<p>利用 <a href="https://www.sympy.org">sympy</a> 根據 <a href="https://00873727922344666445.googlegroups.com/attach/286bbfb50ffde/MeArmPiTechnicalOverviewV0-1DRAFT.pdf?part=0.1&amp;view=1&amp;vt=ANaJVrGDe9LZ85pOQHyyD3YHg6RH_YMlaNxrwQbU1krMBmaDI6eM4g_K1qbkavpOFbSeHZMHSwN39Dn-VAQ9R8gXlPgNOu6lpwVM53o1SePKtQUe3UtGjEM">meArm Pi Technical Overview</a> 中的說明 (修正錯誤後), 解出 Inverse Kinematics 如下:</p>
-<p>當已知 manimpulator 端點的座標為 (x, y ,z) 時, 求 theta, ltheta (low arm link theta) 與 utheta (upper arm link theta). 利用 <a href="https://www.sympy.org">sympy</a> 之前必須先以 pip install sympy 安裝模組.</p>
-<p><a href="./../downloads/ik/mearm_ik_sympy.py">mearm_ik_sympy.py</a></p>
-<p>使用者可以設法在 CoppeliaSim meArm 場景中驗證上述推導是否正確, 並與 <a href="https://github.com/yorkhackspace/meArm">https://github.com/yorkhackspace/meArm</a> 中的控制運算進行比較.</p>
-<p></p><br />Onshape << <a href='Onshape.html'>Previous</a> <a href='Tic-Tat-Toe.html'>Next</a> >> Tic-Tat-Toe</div>
+    <div id="tipue_search_content">w7 任務 << <a href='w7 任務.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace<br /><h1>w7_summary</h1>
+<p>請各大組在分組 blog 區域加入一個 Slug: w7_summary 的工作摘要說明, 將本週課堂上每位組員的工作內容與進度列在網誌中, 並以連結導引至各組員的個人網站中.</p><br />w7 任務 << <a href='w7 任務.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace</div>
         
     <!-- footer -->
       <div class="container">
